// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component render with object props. 1`] = `
<a
  href="/web?index=0"
  onClick={[Function]}
>
  Web
</a>
`;

exports[`Link component render. 1`] = `
<a
  href="https://github.com"
  onClick={[Function]}
>
  GitHub
</a>
`;
